# NEMO

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-run.sh  package.xml  requirements.txt
core/: CMakeLists.txt  package.xml
core/config/: controller.yaml  nav2_params.yaml
core/launch/: core.launch.py  core.launch.xml
core/launch/maps/: factory.yaml
core/msg/: pico_control.msg
core/scripts/: pico_comm.py  pico_commands.py
core/src/: moving_robot.cpp  nemo_controller.cpp
launch/: simulation.launch.xml
nemo/: CMakeLists.txt  package.xml
nemo/config/: controller_server.yaml  ekf.yaml  map_server.yaml  nav2_params.yaml  navigate_through_poses_w_replanning_and_recovery.xml
nemo/launch/: navigation.launch.py  simulation.launch.py
nemo/maps/: factory.yaml
nemo/models/case/: model.sdf
nemo/models/ground/: model.config  model.sdf
nemo/models/ground/materials/scripts/: ground.material
nemo/models/machine/: model.config  model.sdf
nemo/models/robot/: model.config  model.sdf  model.xacro
nemo/models/warehouse/: model.config  model.sdf
nemo/rviz/: urdf_config.rviz
nemo/src/: navigation.cpp  nemo_controller.cpp
nemo/worlds/: factory.world
simulator/: README.md  package.xml
simulator/config/: ekf.yaml
simulator/data/models/case/: model.config
simulator/data/models/diffdrive/: model.config  model.sdf
simulator/data/models/ground/: model.sdf
simulator/data/models/nemo/: model.config  model.sdf  model.xacro
simulator/data/models/warehouse/: model.config  model.sdf
simulator/data/worlds/: factory.world
simulator/launch/: simulation.launch.py  simulation.launch.xml
src/: view_camera.py
src/core/: package.xml
src/core/scripts/: launch.sh  nemo_ps3_controller.py  pico_comm.py  pico_commands.py
src/core/src/: hello_world.cpp
