<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nemo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="thiagohg17@hotmail.com">hg</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>ros_ign_gazebo</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Maybe use share file of install to save models https://answers.ros.org/question/288501/ros2-equivalent-of-rospackagegetpath/ -->
    <!-- <ros_ign_gazebo gazebo_resource_path="$(find-pkg-share)/models"/> -->
  </export>
</package>
